# TempConvert

./: README.md  pyvenv.cfg
RF_XML_tests/: README.md  base.resource  pyproject.toml
RF_XML_tests/resource/build_xml/: build_xml_tempconvert.py
RF_XML_tests/resource/routes/: tempConvert.resource
RF_XML_tests/test/: tempConverter.robot
Scripts/: activate  activate.bat
log/: log.html  output.xml  report.html
