[tool.poetry]
name = "rf-xml"
version = "0.1.0"
description = "Testes de API SOAP com Robot Framework"
authors = ["Vinicius Trindade <vinicius.trindade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
robotframework = "^7.1"
robotframework-requests = "^0.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
